Still no websockets, but a (also crappy) threadpooled-worker static file server with caching

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,13 @@ rmp-serialize    = "0.8"
 rmp-serde        = "0.13.7"
 rmpv             = "0.4.0"
 rmp-rpc          = "0.1.2"
-ws               = "0.7.3"
-futures          = "0.1.14"
-hyper            = "0.11.2"
-hyper-staticfile = "0.1.1"
+futures          = "0.1.18"
+hyper            = "0.11.22"
 subprocess       = "0.1.12"
 tokio-core       = "0.1"
+tokio            = "0.1"
+tokio-io         = "0.1"
 url              = "1.1"
+websocket        = "0.20.2"
+lazy_static      = "1.0.0"
+regex            = "0.2"
