Re-add ws-rs, add better logging

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ serde_derive     = "1.0"
 rmp-serialize    = "0.8"
 rmp-serde        = "0.13.7"
 rmpv             = "0.4.0"
-rmp-rpc          = "0.1.2"
 futures          = "0.1.18"
 hyper            = "0.11.22"
 subprocess       = "0.1.12"
@@ -18,6 +17,8 @@ tokio-core       = "0.1"
 tokio            = "0.1"
 tokio-io         = "0.1"
 url              = "1.1"
-websocket        = "0.20.2"
 lazy_static      = "1.0.0"
 regex            = "0.2"
+ws               = "0.7.3"
+log              = "0.4.1"
+env_logger       = "0.5.5"
