--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ ws               = "0.7.3"
 log              = "0.4.1"
 env_logger       = "0.5.5"
 time             = "0.1"
+bus              = "1.4.1"
